fix: members text overflow in threads
Resolves #5.

--- a/system24-port.theme.css
+++ b/system24-port.theme.css
@@ -282,6 +282,7 @@ body {
 .container__133bf,
 .nowPlayingColumn__133bf,
 .privateChannels__35e86,
+.content_f75fb0 > .membersWrap_c8ffbb,
 .container_c8ffbb {
   overflow: visible !important;
 }
